Fixed spacing

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 	width: 130px;
 	height: 130px;
 	display: block;
-	margin: 35px auto 20px;
+	margin: auto auto auto;
 	border-radius: 50%;
 	grid-column: 1;
 	grid-row: 1;
